--- a/src/styles/components/frames/splash_snow.scss
+++ b/src/styles/components/frames/splash_snow.scss
@@ -1,16 +1,18 @@
 .f-s-snow {
+  
   &__text {
     position: absolute;
     top: 0;
     left: 0;
     max-width: 40%;
     top: 5%;
-    left: 5%;
+    left: 7%;
     z-index: $z-text;
     transition: $transition--base;
     transition-delay: 4s;
     opacity: 0;
     pointer-events: none;
+    
   }
 
   &__snow-wrapper {
